# LM2-Modding

./: .gitmodules
Tools/data_extractor/: CMakeLists.txt
Tools/data_extractor/lib/Binary-Reader/: CMakeLists.txt
Tools/data_extractor/resources/forms/: main_form.txt
Tools/data_extractor/src/: dict_data_manager.cpp  dict_data_manager.hpp  main.cpp
Tools/data_extractor/src/extracted_files/: file_table.cpp  file_table.hpp  mixed_data_file.cpp  mixed_data_file.hpp  texture_metadata_file.cpp  texture_metadata_file.hpp
Tools/data_extractor/src/file_formats/: bitmap.cpp  bitmap.hpp  data.cpp  data.hpp  dict.cpp  dict.hpp  texture.cpp  texture.hpp
Tools/data_extractor/src/gui/: gui.cpp  gui.hpp
Tools/data_extractor/src/utils/: ETC1Converter.cpp  ETC1Converter.hpp  FileSystemDirectoryHandler.hpp
resources/: abbreviations.txt  arm.txt  dict.txt  file_table.txt  texture_metadata.txt
